terminal: align setting items correctly
Reviewed-on: https://chromium-review.googlesource.com/c/apps/libapps/+/1866503
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/terminal/css/terminal_settings.css
+++ b/terminal/css/terminal_settings.css
@@ -58,13 +58,12 @@ terminal-settings-category-option[active] > h2 {
   padding: 0;
 }
 
-.section-body > li {
+.setting-container {
+  align-items: center;
   border-bottom: 1px solid lightgrey;
-  display: block;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
   margin: 0;
   padding: 0 20px;
-}
-
-.section-body > li > h4 {
-  display: inline-block;
 }
